# agentgateway

./: .gitignore  Cargo.toml
crates/agentgateway/: Cargo.toml
crates/agentgateway-app/: Cargo.toml
crates/agentgateway/src/: app.rs  config.rs  inproc.rs  lib.rs  limits.rs  state_manager.rs
crates/agentgateway/src/http/: backendtls.rs  cors.rs  ext_proc.rs  route.rs
crates/agentgateway/src/llm/: mod.rs
crates/agentgateway/src/mcp/upstream/openapi/: tests.rs
crates/agentgateway/src/proxy/: gateway.rs  httpproxy.rs  mod.rs
crates/agentgateway/src/store/: mod.rs
crates/agentgateway/src/telemetry/: log.rs  metrics.rs
crates/agentgateway/src/test_helpers/: proxymock.rs
crates/agentgateway/src/types/: agent.rs  agent_xds.rs  local.rs
crates/authz-core/: Cargo.toml
crates/authz-core/src/: cache.rs  decision.rs  lib.rs
crates/ratelimit-core/: Cargo.toml
crates/ratelimit-core/src/: config.rs  lib.rs  limiter.rs
