[patch.crates-io]
schemars = { git = "https://github.com/howardjohn/schemars", rev = "4364354fa41897a0c2001d891c0a9a38eafedb82" }
http-serde = { git = "https://gitlab.com/howardjohn/http-serde", rev = "163f20f551c2cf6032254b6dbbe246b91ce727ad" }
wiremock = { git = "https://github.com/howardjohn/wiremock-rs", rev = "e55f5b96083125fdabc3e62f92790ee15ae3a10d" }

[workspace]
resolver = "2"
members = [
    "crates/a2a-sdk",
    "crates/agentgateway",
    "crates/agentgateway-app",
    "crates/core",
    "crates/hbone",
    "crates/mock-server",
    "crates/xds",
    "crates/xtask",
]
default-members = [
    "crates/a2a-sdk",
    "crates/core",
    "crates/xds",
    "crates/hbone",
    "crates/agentgateway",
    "crates/agentgateway-app",
]

[workspace.package]
version = "0.7.0"
edition = "2024"
rust-version = "1.90"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
a2a-sdk = { version = "0.7.0", path = "crates/a2a-sdk" }
agent-core = { path = "crates/core" }
agent-hbone = { path = "crates/hbone" }
agent-xds = { path = "crates/xds" }
agentgateway = { path = "crates/agentgateway" }
atomic_float = { version = "1.1.0", features = ["serde"] }
anyhow = "1.0"
arc-swap = "1.7.1"
arcstr = { version = "1.2", features = ["serde"] }
assert_matches = "1.5.0"
async-openai = { version = "0.30.1", default-features = false }
async-stream = "0.3"
async-trait = "0.1"
aws-config = "1.8"
aws-credential-types = "1.2"
aws_event_stream_parser = "0.1"
aws-sigv4 = "1.3"
axum = { version = "0.8", features = ["macros"] }
axum-core = "0.5"
axum-extra = { version = "0.10", features = ["json-lines", "typed-header"] }
# Disable default features to avoid pulling in native-tls and requiring openssl
# TODO: allow default features if we ever add an openssl feature
azure_identity = { version = "0.28", default-features = false }
azure_core = { version = "0.28", default-features = false }
typespec_client_core = { default-features = false, version = "0.7.0" }
base64 = "0.22"
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
hmac = "0.12"
sha2 = "0.10"
subtle = "2.5"
fernet = "0.2"
bytes = { version = "1.10", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clocksource = "0.8"
crossbeam = "0.8"
divan = "0.1"
durationfmt = "0.1"
go-parse-duration = "0.1"
flurry = "0.5.2"
fs-err = { version = "3.1", features = ["tokio"] }
futures = "0.3"
futures-channel = "0.3"
futures-core = "0.3"
futures-util = "0.3"
google-cloud-auth = "1.0"
h2 = "0.4"
headers = "0.4"
hex = "0.4"
hickory-resolver = { version = "0.25", features = ["serde"] }
htpasswd-verify = "0.3"
httpdate = "1.0"
http = "1.3"
http-body = "1"
http-body-util = "0.1.3"
hyper = { version = "1.6", features = ["full"] }
hyper-rustls = "0.27"
hyper-util = { version = "0.1", features = ["full"] }
hyper-util-fork = { path = "crates/hyper-util-fork", features = ["full"] }
include_dir = "0.7"
indexmap = { version = "2.9", features = ["serde"] }
insta = { version = "1.38", features = ["json", "redactions", "filters"] }
ipnet = { version = "2.11", features = ["serde"] }
itertools = "0.14"
jsonwebtoken = { version = "10.0", features = ["aws_lc_rs"] }
lazy_static = "1.4"
libc = "0.2"
notify = "8.0"
notify-debouncer-full = "0.6"
num_cpus = "1.17"
once_cell = "1.21"
openapiv3 = "2.2"
opentelemetry = "0.31"
opentelemetry-http = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31"
parking_lot = "0.12"
percent-encoding = "2.3"
phonenumber = "0.3"
pin-project-lite = "0.2"
pingora-pool = "0.6"
pprof = { version = "0.15", features = [
    "protobuf",
    "protobuf-codec",
    "criterion",
] }
pretty_env_logger = "0.5"
prometheus-client = "0.24"
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
prost-wkt-types = { version = "0.7.0", features = ["vendored-protox"] }
prost-wkt-build = "0.7.0"
rand = "0.9"
rcgen = { version = "0.14", features = ["pem"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "charset",
    "macos-system-configuration",
    "rustls-tls",
] }
rmcp = { version = "0.8.1", features = [
    "client",
    "transport-sse-server",
    "transport-sse-client",
    "transport-child-process",
    "transport-streamable-http-server",
    "transport-streamable-http-client",
    "reqwest",
    "auth",
] }
rustc_version = "0.4"
rustls = { version = "0.23", features = ["tls12", "ring"] }
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
rustls-pki-types = "1.12"
schemars = { version = "=1.0.4", git = "https://github.com/howardjohn/schemars", rev = "4364354fa41897a0c2001d891c0a9a38eafedb82", features = [
    #schemars = { version = "1.0", features = [
    "bytes1",
    "arcstr1",
    "raw_value",
    "preserve_order",
] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde-transcode = "1.1"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_json_path_to_error = "0.1"
serde_regex = "1.1"
serde_yaml = "0.9"
serde-untagged = "0.1"
stacker = "0.1"
shellexpand = "3.1"
socket2 = "0.6"
split-iter = "0.1"
sse-stream = "0.2"
tempfile = "3.20"
thiserror = "2.0"
tiktoken-rs = "0.7"
tokio = { version = "1.48", features = ["full", "macros", "sync"] }
tokio-rustls = { version = "0.26", default-features = false }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tokio-test = "0.4"
tokio-util = { version = "0.7", features = ["codec"] }
tokio_sse_codec = "0.0.2"
tonic = { version = "0.14", features = ["codegen", "transport"] }
tonic-prost = { version = "0.14" }
tonic-prost-build = { version = "0.14", features = ["transport"] }
tonic-build = { version = "0.14", features = ["transport"] }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors"] }
tower-serve-static = "0.1"
tower-service = "0.3"
tracing = "0.1"
tracing-appender = "0.2"
tracing-core = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
    "json",
] }
url = "2.5"
wiremock = { version = "0.6.3", features = ["tls"] }
x509-parser = { version = "0.18", default-features = false, features = ["verify-aws"] }
which = "8.0.0"
cel = { version = "0.11.4", features = [
    "json",
    "regex",
    "chrono",
] }
crossbeam-channel = "0.5"
http-serde = "2.1"
itoa = "1.0"
serde_urlencoded = "0.7"
serde_with = { version = "3.14", features = [
    "schemars_1",
    "macros",
    "alloc",
], default-features = false }
value-bag = { version = "1.11", features = ["serde", "value-bag-serde1"] }
time = "0.3"
tikv-jemallocator = { version = "0.6", features = [
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
jemalloc_pprof = { version = "0.8", features = ["symbolize"] }
protox = "0.9"
async-compression = { version = "0.4.27", features = [
    "brotli",
    "zlib",
    "gzip",
    "zstd",
    "tokio",
] }
core_affinity = "0.8.3"
frozen-collections = "0.8.0"
heck = "0.5"
macro_rules_attribute = "0.2.2"

# Release optimized but without as many dependencies, suitable for incremental development
[profile.quick-release]
inherits = "release"
codegen-units = 16
lto = false
incremental = true

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
inherits = "quick-release"
debug = true
